Table Format Added

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
-    <center>
-        <img src="1645470010560-modified.png" alt="Profile Picture" height=250>
-        <h1>Sunami Dasgupta</h1>
-        <p><em>Founder at <a href="#"><strong>Multiprocessing Muggles</strong></a></em></p>
-        <p>5 ⭐ Coder at <a href="#"><strong>CodeChef</strong></a></p>
-    </center>
-    <p>Founder of MULTIPROCESSING MUGGLES worked on various fields of development Like Artificial Intelligence, Machine
+    <table cellspacing="10px">
+        <tr>
+            <td>
+                <img src="1645470010560-modified.png" alt="Profile Picture" height=250>
+            </td>
+            <td>
+                <h1>Sunami Dasgupta</h1>
+                <p><em>Founder at <a href="#"><strong>Multiprocessing Muggles</strong></a></em></p>
+                <p>5 ⭐ Coder at <a href="#"><strong>CodeChef</strong></a></p>
+            </td>
+        </tr>
+    </table>
+        <p>Founder of MULTIPROCESSING MUGGLES worked on various fields of development Like Artificial Intelligence, Machine
         Learning, Web Development, 2-D games, and many more. I am comfortable in Java, Python, C++, Html CSS Javascript,
         and a
         few others. I'm currently learning Kotlin. Developed applications in various fields: Medical, Everyday use, News
