--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<style>
+    body{
+        background-color: #eaf6f6;
+    }
+    hr{
+        border-style: dotted none none none;
+        border-width: 5px;
+        width:10%;
+        border-color: gray;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
