--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </td>
             <td>
                 <h1>Sunami Dasgupta</h1>
-                <p><em>Founder at <a href="#"><strong>Multiprocessing Muggles</strong></a></em></p>
-                <p>5 ⭐ Coder at <a href="#"><strong>CodeChef</strong></a></p>
+                <p><em>Founder at <a href="https://www.multiprocessingmuggles.com/"><strong>Multiprocessing Muggles</strong></a></em></p>
+                <p>5 ⭐ Coder at <a href="https://www.codechef.com/"><strong>CodeChef</strong></a></p>
             </td>
         </tr>
     </table>
